chore(release): switch npm package to @arnavpisces/sutra

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sutra",
+  "name": "@arnavpisces/sutra",
   "version": "1.0.0",
   "description": "Terminal TUI for Jira tickets and Confluence docs",
   "type": "module",
